[workspace]

members = [
  "./crates/ilp-cli",
  "./crates/ilp-node",
  "./crates/interledger",
  "./crates/interledger-api",
  "./crates/interledger-btp",
  "./crates/interledger-ccp",
  "./crates/interledger-http",
  "./crates/interledger-ildcp",
  "./crates/interledger-packet",
  "./crates/interledger-router",
  "./crates/interledger-service",
  "./crates/interledger-service-util",
  "./crates/interledger-settlement",
  "./crates/interledger-spsp",
  "./crates/interledger-store-redis",
  "./crates/interledger-stream",
]

[patch.crates-io]
tracing-subscriber = { git = "https://github.com/emschwartz/tracing", branch = "es-fix-subscriber", default-features = true, features = ["tracing-log"]}
tracing-futures = { git = "https://github.com/emschwartz/tracing", branch = "es-fix-subscriber", default-features = true, features = ["tokio", "futures-01"] }
