[workspace]

members = [
  "./crates/ilp-cli",
  "./crates/ilp-node",
  "./crates/interledger",
  "./crates/interledger-api",
  "./crates/interledger-btp",
  "./crates/interledger-ccp",
  "./crates/interledger-http",
  "./crates/interledger-ildcp",
  "./crates/interledger-packet",
  "./crates/interledger-router",
  "./crates/interledger-service",
  "./crates/interledger-service-util",
  "./crates/interledger-settlement",
  "./crates/interledger-spsp",
  "./crates/interledger-store",
  "./crates/interledger-stream",
]
