[package]
name = "ilp-cli"
version = "0.0.1"
description = "Interledger.rs Command-Line Interface"
license = "Apache-2.0"
edition = "2018"
repository = "https://github.com/interledger-rs/interledger-rs"

[dependencies]
clap = { version = "2.33.0", default-features = false }
http = "0.1.18"
reqwest = { version = "0.9.20", default-features = false, features = ["default-tls"] }
serde = "1.0.101"
serde_json = "1.0.39"
tungstenite = "0.9.1"
url = "2.1.0"
