[package]
name = "ilp-cli"
version = "0.3.0"
authors = ["Ben Striegel <bstriegel@ripple.com>"]
description = "Interledger.rs Command-Line Interface"
license = "Apache-2.0"
edition = "2018"
repository = "https://github.com/interledger-rs/interledger-rs"

[dependencies]
clap = { version = "2.33.0", default-features = false }
thiserror = { version = "1.0.4", default-features = false }
http = { version = "0.1.18", default-features = false }
reqwest = { version = "0.9.22", default-features = false, features = ["default-tls"] }
serde = { version = "1.0.101", default-features = false }
serde_json = { version = "1.0.41", default-features = false }
tungstenite = { version = "0.9.1", default-features = false, features = ["tls"] }
url = { version = "2.1.0", default-features = false }
