[package]
name = "ilp-cli"
version = "1.0.0"
authors = ["Ben Striegel <bstriegel@ripple.com>"]
description = "Interledger.rs Command-Line Interface"
license = "Apache-2.0"
edition = "2018"
repository = "https://github.com/interledger-rs/interledger-rs"

[dependencies]
clap = { version = "2.33.0", default-features = false }
thiserror = { version = "1.0.10", default-features = false }
http = { version = "0.2", default-features = false }
reqwest = { version = "0.11.4", default-features = false, features = ["default-tls", "blocking", "json"] }
serde = { version = "1.0.101", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.41", default-features = false }
tokio-tungstenite = { version = "0.15.0", default-features = false, features = ["connect", "native-tls"] }
url = { version = "2.1.1", default-features = false }
