[package]
name = "ilp-node"
version = "0.5.2"
authors = ["Evan Schwartz <evan@ripple.com>"]
description = "Interledger node (sender, connector, receiver bundle)"
license = "Apache-2.0"
edition = "2018"
repository = "https://github.com/interledger-rs/interledger-rs"
default-run = "ilp-node"

[dependencies]
clap = { version = "2.33.0", default-features = false }
config = { version = "0.9.3", default-features = false, features = ["json", "toml", "yaml"] }
interledger-node = { path = "../interledger-node", version = "^0.5.1" }
tracing-subscriber = { version = "0.1.6", default-features = true, features = ["tracing-log"] }
libc = { version = "0.2.62", default-features = false }

[badges]
circle-ci = { repository = "interledger-rs/interledger-rs" }
codecov = { repository = "interledger-rs/interledger-rs" }
