[package]
name = "ilp-node"
version = "0.6.0"
authors = ["Evan Schwartz <evan@ripple.com>"]
description = "Interledger node (sender, connector, receiver bundle)"
license = "Apache-2.0"
edition = "2018"
repository = "https://github.com/interledger-rs/interledger-rs"
default-run = "ilp-node"

[features]
default = ["balance-tracking", "redis"]
balance-tracking = []
redis = ["redis_crate", "interledger/redis"]

# This is an experimental feature that enables submitting packet
# records to Google Cloud PubSub. This may be removed in the future.
google-pubsub = ["base64", "chrono", "parking_lot", "reqwest", "serde_json", "yup-oauth2"]
# This enables monitoring and tracing related features
monitoring = [
    "metrics",
    "metrics-core",
    "metrics-runtime",
    "tracing-futures",
    "tracing-subscriber",
]

[[test]]
name = "redis_tests"
path = "tests/redis/redis_tests.rs"
required-features = ["redis"]


[dependencies]
bytes = { version = "0.4.12", default-features = false }
bytes05 = { package = "bytes", version = "0.5", default-features = false }
clap = { version = "2.33.0", default-features = false }
config = { version = "0.9.3", default-features = false, features = ["json", "toml", "yaml"] }
futures = { version = "0.3.1", default-features = false, features = ["compat"] }
hex = { version = "0.4.0", default-features = false }
interledger = { path = "../interledger", version = "^0.6.0", default-features = false, features = ["node"] }
lazy_static = { version = "1.4.0", default-features = false }
num-bigint = { version = "0.2.3", default-features = false, features = ["std"] }
redis_crate = { package = "redis", version = "0.15.1", optional = true, features = ["tokio-rt-core"] }
ring = { version = "0.16.9", default-features = false }
serde = { version = "1.0.101", default-features = false }
tokio = { version = "0.2.8", features = ["rt-core", "macros", "time"] }
url = { version = "2.1.0", default-features = false }
libc = { version = "0.2.62", default-features = false }
warp = { version = "0.2", default-features = false, features = ["websocket"] }
secrecy = { version = "0.5.1", default-features = false, features = ["alloc", "serde"] }
uuid = { version = "0.8.1", default-features = false}

# For google-pubsub
base64 = { version = "0.10.1", default-features = false, optional = true }
chrono = { version = "0.4.9", default-features = false, features = [], optional = true}
parking_lot = { version = "0.9.0", default-features = false, optional = true }
reqwest = { version = "0.10.0", default-features = false, features = ["default-tls", "json"], optional = true }
serde_json = { version = "1.0.41", default-features = false, optional = true }
yup-oauth2 = { version = "3.1.1", default-features = false, optional = true }


# Tracing / metrics / prometheus for instrumentation
tracing = { version = "0.1.12", default-features = true, features = ["log"] }
tracing-futures = { version = "0.2", default-features = true, features = ["tokio", "futures-03"], optional = true }
tracing-subscriber = { version = "0.1.6", default-features = true, features = ["tracing-log"], optional = true }
metrics = { version = "0.12.0", default-features = false, features = ["std"], optional = true }
metrics-core = { version = "0.5.1", default-features = false, optional = true }
metrics-runtime = { version = "0.12.0", default-features = false, features = ["metrics-observer-prometheus"], optional = true }

[dev-dependencies]
approx = { version = "0.3.2", default-features = false }
base64 = { version = "0.10.1", default-features = false }
net2 = { version = "0.2.33", default-features = false }
rand = { version = "0.7.2", default-features = false }
reqwest = { version = "0.10.0", default-features = false, features = ["default-tls", "json"] }
serde_json = { version = "1.0.41", default-features = false }
tokio-retry = { version = "0.2.0", default-features = false }

[badges]
circle-ci = { repository = "interledger-rs/interledger-rs" }
codecov = { repository = "interledger-rs/interledger-rs" }