[package]
name = "ilp-node"
version = "1.0.0"
authors = ["Evan Schwartz <evan@ripple.com>"]
description = "Interledger node (sender, connector, receiver bundle)"
license = "Apache-2.0"
edition = "2018"
repository = "https://github.com/interledger-rs/interledger-rs"
default-run = "ilp-node"
build = "build.rs"

[features]
default = ["balance-tracking", "redis", "monitoring"]
balance-tracking = []
redis = ["redis_crate", "interledger/redis"]

# This is an experimental feature that enables submitting packet
# records to Google Cloud PubSub. This may be removed in the future.
google-pubsub = ["base64", "chrono", "parking_lot", "reqwest", "serde_json", "yup-oauth2"]
# This enables monitoring and tracing related features
monitoring = [
    "metrics",
    "metrics-core",
    "metrics-runtime",
    "tracing-futures",
    "tracing-subscriber",
    "tracing-appender",
]

[[test]]
name = "redis_tests"
path = "tests/redis/redis_tests.rs"
required-features = ["redis"]

[build-dependencies]
# vergen allows to get the VERGEN_BUILD_TIMESTAMP etc environment variables
vergen = { version = "4.2" }

[dependencies]
interledger = { path = "../interledger", version = "1.0.0", default-features = false, features = ["node"] }

bytes = { package = "bytes", version = "1.0.1" }
cfg-if = { version = "0.1.10", default-features = false }
clap = { version = "2.33.0", default-features = false }
config = { version = "0.10.1", default-features = false, features = ["json", "yaml"] }
futures = { version = "0.3.7", default-features = false, features = ["compat"] }
hex = { version = "0.4.0" }
once_cell = { version = "1.3.1", default-features = false }
num-bigint = { version = "0.2.3", default-features = false, features = ["std"] }
redis_crate = { package = "redis", version = "0.21.0", optional = true, default-features = false, features = ["tokio-comp"] }
ring = { version = "0.16.9", default-features = false }
serde = { version = "1.0.101", default-features = false }
tokio = { version = "1.9.0", default-features = false, features = ["rt-multi-thread", "macros", "time", "sync"] }
tokio-stream = { version = "0.1.7", features = ["sync"] }
tracing = { version = "0.1.12", default-features = false, features = ["log"] }
url = { version = "2.1.1", default-features = false }
libc = { version = "0.2.62", default-features = false }
warp = { version = "0.3.1", default-features = false, features = ["websocket"] }
secrecy = { version = "0.8", default-features = false, features = ["alloc", "serde"] }
uuid = { version = "0.8.1", default-features = false, features = ["v4"] }

# For google-pubsub
base64 = { version = "0.11.0", default-features = false, optional = true }
chrono = { version = "0.4.9", default-features = false, optional = true}
parking_lot = { version = "0.10.0", default-features = false, optional = true }
reqwest = { version = "0.10.0", default-features = false, features = ["default-tls", "json"], optional = true }
serde_json = { version = "1.0.41", default-features = false, optional = true }
yup-oauth2 = { version = "4", optional = true }

# Tracing / metrics / prometheus for instrumentation
tracing-futures = { version = "0.2", default-features = false, features = ["std", "futures-03"], optional = true }
tracing-subscriber = { version = "0.2.0", default-features = false, features = ["tracing-log", "fmt", "env-filter", "chrono"], optional = true }
tracing-appender = { version = "0.1", optional = true }
metrics = { version = "0.12.0", default-features = false, features = ["std"], optional = true }
metrics-core = { version = "0.5.1", default-features = false, optional = true }
metrics-runtime = { version = "0.13.0", default-features = false, features = ["metrics-observer-prometheus"], optional = true }

[dev-dependencies]
base64 = { version = "0.11.0", default-features = false }
socket2 = "0.3.15"
rand = { version = "0.7.2", default-features = false }
reqwest = { version = "0.10.0", default-features = false, features = ["default-tls", "json"] }
serde_json = { version = "1.0.41", default-features = false }
tungstenite = {version = "0.10", default-features = false }
criterion = { version = "0.3", default-features = false , features = ["cargo_bench_support", 'html_reports']}
tempfile = "3"

[badges]
circle-ci = { repository = "interledger-rs/interledger-rs" }
codecov = { repository = "interledger-rs/interledger-rs" }

[[bench]]
name = "multiple_payments"
harness = false
