[package]
name = "interledger-api"
version = "0.1.1-beta.3"
authors = ["Evan Schwartz <evan@ripple.com>"]
description = "API for managing an Interledger node"
license = "Apache-2.0"
edition = "2018"
repository = "https://github.com/interledger-rs/interledger-rs"

[dependencies]
bytes = { version = "0.4.12", default-features = false }
futures = { version = "0.1.29", default-features = false }
futures-retry = { version = "0.3.3", default-features = false }
http = { version = "0.1.18", default-features = false }
interledger-packet = { path = "../interledger-packet", version = "^0.2.2-alpha.1", default-features = false }
interledger-http = { path = "../interledger-http", version = "^0.2.2-alpha.1", default-features = false }
interledger-ildcp = { path = "../interledger-ildcp", version = "^0.2.2-alpha.1", default-features = false }
interledger-router = { path = "../interledger-router", version = "^0.2.2-alpha.1", default-features = false }
interledger-service = { path = "../interledger-service", version = "^0.2.2-alpha.1", default-features = false }
interledger-service-util = { path = "../interledger-service-util", version = "^0.2.2-alpha.1", default-features = false }
interledger-settlement = { path = "../interledger-settlement", version = "^0.1.1-alpha.1", default-features = false }
interledger-spsp = { path = "../interledger-spsp", version = "^0.2.2-alpha.1", default-features = false }
interledger-stream = { path = "../interledger-stream", version = "^0.2.2-alpha.1", default-features = false }
interledger-ccp = { path = "../interledger-ccp", version = "^0.1.1-alpha.1", default-features = false }
interledger-btp = { path = "../interledger-btp", version = "^0.2.2-alpha.1", default-features = false }
log = { version = "0.4.8", default-features = false }
serde = { version = "1.0.101", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.41", default-features = false }
reqwest = { version = "0.9.21", default-features = false }
url = { version = "2.1.0", default-features = false, features = ["serde"] }
warp = { version = "0.1.20", default-features = false }
secrecy = { version = "0.4.0", default-features = false, features = ["serde"] }
chrono = { version = "0.4.9", default-features = false }
serde_path_to_error = { version = "0.1", default-features = false }
regex = { version ="1.3.1", default-features = false, features = ["std"] }
lazy_static = { version ="1.4.0", default-features = false }

[badges]
circle-ci = { repository = "interledger-rs/interledger-rs" }
codecov = { repository = "interledger-rs/interledger-rs" }
