[package]
name = "interledger-api"
version = "1.0.0"
authors = ["Evan Schwartz <evan@ripple.com>"]
description = "API for managing an Interledger node"
license = "Apache-2.0"
edition = "2018"
repository = "https://github.com/interledger-rs/interledger-rs"

[dependencies]
interledger-packet = { path = "../interledger-packet", version = "1.0.0", default-features = false }
interledger-http = { path = "../interledger-http", version = "1.0.0", default-features = false }
interledger-ildcp = { path = "../interledger-ildcp", version = "1.0.0", default-features = false }
interledger-rates = { path = "../interledger-rates", version = "1.0.0", default-features = false }
interledger-router = { path = "../interledger-router", version = "1.0.0", default-features = false }
interledger-service = { path = "../interledger-service", version = "1.0.0", default-features = false }
interledger-service-util = { path = "../interledger-service-util", version = "1.0.0", default-features = false }
interledger-settlement = { path = "../interledger-settlement", version = "1.0.0", default-features = false }
interledger-spsp = { path = "../interledger-spsp", version = "1.0.0", default-features = false }
interledger-stream = { path = "../interledger-stream", version = "1.0.0", default-features = false }
interledger-ccp = { path = "../interledger-ccp", version = "1.0.0", default-features = false }
interledger-btp = { path = "../interledger-btp", version = "1.0.0", default-features = false }
interledger-errors = { path = "../interledger-errors", version = "1.0.0", default-features = false, features = ["warp_errors"] }

bytes = { version = "1.0.1", default-features = false }
futures = { version = "0.3.7", default-features = false }
futures-retry = { version = "0.4", default-features = false }
http = { version = "0.2", default-features = false }
tracing = { version = "0.1.12", default-features = false, features = ["log"] }
serde = { version = "1.0.101", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.41", default-features = false }
reqwest = { version = "0.10", default-features = false, features = ["default-tls", "json"] }
url = { version = "2.1.1", default-features = false, features = ["serde"] }
uuid = { version = "0.8.1", default-features = false}
secrecy = { version = "0.8", default-features = false, features = ["serde"] }
once_cell = "1.3.1"
async-trait = "0.1.22"
tokio = { version = "1.9.0", default-features = false, features = ["rt", "macros"] }


[dev-dependencies]

[badges]
circle-ci = { repository = "interledger-rs/interledger-rs" }
codecov = { repository = "interledger-rs/interledger-rs" }
