[package]
name = "interledger-btp"
version = "0.2.2-beta.3"
authors = ["Evan Schwartz <evan@ripple.com>"]
description = "Bilateral Transfer Protocol (BTP) client and server services for Interledger.rs"
license = "Apache-2.0"
edition = "2018"
repository = "https://github.com/interledger-rs/interledger-rs"

[dependencies]
base64 = { version = "0.10.1", default-features = false }
bytes = { version = "0.4.12", default-features = false }
byteorder = { version = "1.3.2", default-features = false }
chrono = { version = "0.4.9", default-features = false }
futures = { version = "0.1.29", default-features = false }
interledger-ildcp = { path = "../interledger-ildcp", version = "^0.2.2-alpha.1", default-features = false }
interledger-packet = { path = "../interledger-packet", version = "^0.2.2-alpha.1", default-features = false }
interledger-service = { path = "../interledger-service", version = "^0.2.2-alpha.1", default-features = false }
log = { version = "0.4.8", default-features = false }
num-bigint = { version = "0.2.3", default-features = false }
parking_lot = { version = "0.9.0", default-features = false }
quick-error = { version = "1.2.2", default-features = false }
rand = { version = "0.7.2", default-features = false }
ring = { version = "0.14.6", default-features = false }
stream-cancel = { version = "0.4.4", default-features = false }
tokio-executor = { version = "0.1.8", default-features = false }
tokio-io = { version = "0.1.12", default-features = false }
tokio-tcp = { version = "0.1.3", default-features = false }
tokio-timer = { version = "0.2.11", default-features = false }
tokio-tungstenite = { version = "0.9.0", default-features = false, features = ["connect"] }
tungstenite = { version = "0.9.1", default-features = false }
url = { version = "2.1.0", default-features = false }
warp = { version = "0.1.20", default-features = false }

[dev-dependencies]
env_logger = { version = "0.7.0", default-features = false }
hex = { version = "0.4.0", default-features = false }
lazy_static = { version = "1.4.0", default-features = false }
net2 = { version = "0.2.33", default-features = false }
tokio = { version = "0.1.22", default-features = false }
