[package]
name = "interledger-btp"
version = "0.4.0"
authors = ["Evan Schwartz <evan@ripple.com>"]
description = "Bilateral Transfer Protocol (BTP) client and server services for Interledger.rs"
license = "Apache-2.0"
edition = "2018"
repository = "https://github.com/interledger-rs/interledger-rs"

[dependencies]
bytes = { version = "0.4.12", default-features = false }
byteorder = { version = "1.3.2", default-features = false }
chrono = { version = "0.4.9", default-features = false }
futures = { version = "0.3.1", default-features = false }
interledger-errors = { path = "../interledger-errors", version = "^0.1.0", default-features = false }
interledger-packet = { path = "../interledger-packet", version = "^0.4.0", default-features = false }
interledger-service = { path = "../interledger-service", version = "^0.4.0", default-features = false }
log = { version = "0.4.8", default-features = false }
num-bigint = { version = "0.2.3", default-features = false, features = ["std"] }
parking_lot = { version = "0.10.0", default-features = false }
quick-error = { version = "1.2.2", default-features = false }
rand = { version = "0.7.2", default-features = false, features = ["std"] }
stream-cancel = { version = "0.5", default-features = false }
tokio-tungstenite = { version = "0.10.1", package = "tokio-tungstenite", git = "https://github.com/snapview/tokio-tungstenite", default-features = false, features = ["tls", "connect"] }

tungstenite = { version = "0.10.1", default-features = false }
# we must force url v2.1.0 because stripping the "btp+" prefix from a BTP URL
# is an operation which panics
url = { version = "2.1.1", default-features = false }
uuid = { version = "0.8.1", default-features = false, features = ["v4"]}
warp = { version = "0.2", default-features = false, features = ["websocket"] }
secrecy = "0.6"
async-trait = "0.1.22"
tokio = { version = "0.2.8", features = ["rt-core", "time", "stream", "macros"] }
once_cell = "1.3.1"
pin-project = "0.4.6"
thiserror = "1.0.10"

[dev-dependencies]
hex = { version = "0.4.0", default-features = false }
net2 = { version = "0.2.33", default-features = false }
