[package]
name = "interledger-ccp"
version = "0.1.1-alpha.1"
authors = ["Evan Schwartz <evan@ripple.com>"]
description = "Implementation of the Interledger Dynamic Configuration Protocol (ILDCP)"
license = "Apache-2.0"
edition = "2018"
repository = "https://github.com/interledger-rs/interledger-rs"

[dependencies]
bytes = { version = "0.4.12", default-features = false }
byteorder = { version = "1.3.1", default-features = false }
futures = { version = "0.1.25", default-features = false }
hex = { version = "0.3.2", default-features = false }
interledger-ildcp = { path = "../interledger-ildcp", version = "^0.2.2-alpha.1"}
interledger-packet = { path = "../interledger-packet", version = "^0.2.2-alpha.1"}
interledger-service = { path = "../interledger-service", version = "^0.2.2-alpha.1"}
lazy_static = { version = "1.3.0", default-features = false }
log = { version = "0.4.6", default-features = false }
parking_lot = { version = "0.7.1", default-features = false }
ring = { version = "0.14.6", default-features = false }
tokio-executor = { version = "0.1.7", default-features = false }
tokio-timer = { version = "0.2.10", default-features = false }
serde = { version = "1.0.99", default-features = false, features = ["derive"] }
