[package]
name = "interledger-errors"
version = "0.1.0"
authors = ["Georgios Konstantopoulos <me@gakonst.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
thiserror = "1.0.10"
serde = { version = "1.0.101", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.41" }
serde_path_to_error = { version = "0.1", default-features = false }
http = { version = "0.2.0", default-features = false }
chrono = { version = "0.4.9", features = ["clock"], default-features = false }
regex = { version ="1.3.1", default-features = false, features = ["std"] }
interledger-packet = { path = "../interledger-packet", version = "^0.4.0", default-features = false }

warp = { version = "0.2.1" }
redis = { version = "0.15.1", optional = true }

[features]
warp_errors = []
redis_errors = ["redis"]
