[package]
name = "interledger-errors"
version = "1.0.0"
authors = ["Georgios Konstantopoulos <me@gakonst.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
interledger-packet = { path = "../interledger-packet", version = "1.0.0", default-features = false }

once_cell = { version = "1.3.1", default-features = false }
thiserror = { version = "1.0.10", default-features = false }
serde = { version = "1.0.101", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.41", default-features = false }
serde_path_to_error = { version = "0.1", default-features = false }
http = { version = "0.2.0", default-features = false }
chrono = { version = "0.4.9", default-features = false, features = ["clock"] }
regex = { version ="1.3.1", default-features = false, features = ["std"] }
warp = { version = "0.3.1", default-features = false }
redis = { package = "redis", version = "0.21.0", optional = true, default-features = false, features = ["tokio-comp"] }
url = { version = "2.1.1", default-features = false }

[features]
warp_errors = []
redis_errors = ["redis"]
