[package]
name = "interledger-http"
version = "0.2.2-beta.3"
authors = ["Evan Schwartz <evan@ripple.com>"]
description = "HTTP client and server services for Interledger.rs"
license = "Apache-2.0"
edition = "2018"
repository = "https://github.com/interledger-rs/interledger-rs"

[dependencies]
bytes = { version = "0.4.12", default-features = false }
futures = { version = "0.1.29", default-features = false }
interledger-packet = { path = "../interledger-packet", version = "^0.2.2-alpha.1", default-features = false }
interledger-service = { path = "../interledger-service", version = "^0.2.2-alpha.1", default-features = false }
log = { version = "0.4.8", default-features = false }
reqwest = { version = "0.9.21", default-features = false }
url = { version = "2.1.0", default-features = false }
warp = { version = "0.1.20", default-features = false }
