[package]
name = "interledger-http"
version = "0.4.0"
authors = ["Evan Schwartz <evan@ripple.com>"]
description = "HTTP client and server services for Interledger.rs"
license = "Apache-2.0"
edition = "2018"
repository = "https://github.com/interledger-rs/interledger-rs"

[dependencies]
bytes = { version = "0.4.12", default-features = false }
futures = { version = "0.1.29", default-features = false }
interledger-packet = { path = "../interledger-packet", version = "^0.4.0", default-features = false }
interledger-service = { path = "../interledger-service", version = "^0.4.0", default-features = false }
log = { version = "0.4.8", default-features = false }
reqwest = { version = "0.9.22", default-features = false, features = ["default-tls"] }
url = { version = "2.1.0", default-features = false }
warp = { version = "0.1.20", default-features = false }
serde = { version = "1.0.101", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.41", default-features = false }
serde_path_to_error = { version = "0.1", default-features = false }
http = { version = "0.1.18", default-features = false }
chrono = { version = "0.4.9", features = ["clock"], default-features = false }
regex = { version ="1.3.1", default-features = false, features = ["std"] }
lazy_static = { version ="1.4.0", default-features = false }
