[package]
name = "interledger-http"
version = "1.0.0"
authors = ["Evan Schwartz <evan@ripple.com>"]
description = "HTTP client and server services for Interledger.rs"
license = "Apache-2.0"
edition = "2018"
repository = "https://github.com/interledger-rs/interledger-rs"

[dependencies]
interledger-errors = { path = "../interledger-errors", version = "1.0.0", default-features = false }
interledger-packet = { path = "../interledger-packet", version = "1.0.0", default-features = false }
interledger-service = { path = "../interledger-service", version = "1.0.0", default-features = false }

bytes = { version = "1.0.1", default-features = false }
futures = { version = "0.3.7", default-features = false }
tracing = { version = "0.1.12", default-features = false, features = ["log"] }
reqwest = { version = "0.10.0", default-features = false, features = ["default-tls"] }
url = { version = "2.1.1", default-features = false }
warp = { version = "0.2", default-features = false }
serde = { version = "1.0.101", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.41", default-features = false }
serde_path_to_error = { version = "0.1", default-features = false }
http = { version = "0.2.0", default-features = false }
once_cell = { version = "1.3.1", default-features = false }
mime = { version ="0.3.14", default-features = false }
secrecy = { version = "0.8", default-features = false, features = ["alloc"] }
async-trait = { version = "0.1.22", default-features = false }

[dev-dependencies]
uuid = { version = "0.8.1", default-features = false, features=["v4"]}
tokio = { version = "0.2.6", default-features = false, features = ["rt-core", "macros"]}
