[package]
name = "interledger-ildcp"
version = "0.4.0"
authors = ["Evan Schwartz <evan@ripple.com>"]
description = "Implementation of the Interledger Dynamic Configuration Protocol (ILDCP)"
license = "Apache-2.0"
edition = "2018"
repository = "https://github.com/interledger-rs/interledger-rs"

[dependencies]
bytes = { version = "0.4.12", default-features = false }
byteorder = { version = "1.3.2", default-features = false }
futures = { version = "0.1.29", default-features = false }
interledger-packet = { path = "../interledger-packet", version = "^0.4.0", default-features = false }
interledger-service = { path = "../interledger-service", version = "^0.4.0", default-features = false }
lazy_static = { version = "1.4.0", default-features = false }
log = { version = "0.4.8", default-features = false }
