[package]
name = "interledger-ildcp"
version = "0.4.0"
authors = ["Evan Schwartz <evan@ripple.com>"]
description = "Implementation of the Interledger Dynamic Configuration Protocol (ILDCP)"
license = "Apache-2.0"
edition = "2018"
repository = "https://github.com/interledger-rs/interledger-rs"

[dependencies]
bytes = { version = "0.4.12", default-features = false }
byteorder = { version = "1.3.2", default-features = false }
futures = { version = "0.3", default-features = false }
interledger-packet = { path = "../interledger-packet", version = "^0.4.0", default-features = false }
interledger-service = { path = "../interledger-service", version = "^0.4.0", default-features = false }
once_cell = "1.3.1"
log = { version = "0.4.8", default-features = false }
async-trait = "0.1.22"

[dev-dependencies]
tokio = { version = "0.2.6", features = ["macros","rt-core"]}
uuid = { version = "0.8.1", features = ["v4"] }
