[package]
name = "interledger-ildcp"
version = "1.0.0"
authors = ["Evan Schwartz <evan@ripple.com>"]
description = "Implementation of the Interledger Dynamic Configuration Protocol (ILDCP)"
license = "Apache-2.0"
edition = "2018"
repository = "https://github.com/interledger-rs/interledger-rs"

[dependencies]
interledger-packet = { path = "../interledger-packet", version = "1.0.0", default-features = false }
interledger-service = { path = "../interledger-service", version = "1.0.0", default-features = false }

bytes = { version = "1.0.1" }
futures = { version = "0.3.7", default-features = false }
once_cell = { version = "1.3.1", default-features = false }
tracing = { version = "0.1.12", default-features = false, features = ["log"] }
async-trait = { version = "0.1.22", default-features = false }

[dev-dependencies]
tokio = { version = "0.2.6", default-features = false, features = ["macros","rt-core"]}
uuid = { version = "0.8.1", default-features = false, features = ["v4"] }
