[package]
name = "interledger-packet"
version = "0.2.1"
authors = ["Evan Schwartz <evan@ripple.com>"]
description = "Interledger packet serialization/deserialization"
license = "Apache-2.0"
edition = "2018"
repository = "https://github.com/interledger-rs/interledger-rs"

[dependencies]
byteorder = "1.3.1"
bytes = { version = "0.4.12", features = ["serde"] }
chrono = "0.4.6"
hex = "0.3.2"
quick-error = "1.2.2"
serde = { version = "1.0.99", features = ["derive"], optional = true }
regex = "1.1.6"
lazy_static = "1.3"

[dev-dependencies]
criterion = "0.3.0"
lazy_static = "1.3"
 # "serde" is both here and in `[dependencies]` to ensure it is included during
# testing, but optional otherwise.
serde = { version = "1.0.99", features = ["derive"]  }
serde_test = "1.0"

[[bench]]
name = "packets"
harness = false
